# Dev-pilot

./: .gitignore  LICENSE  README.md
cyber security /: .gitignore  ARCHITECTURE.md  EXTENSION_GUIDE.md  LICENSE  LLM_AGENT_ARCHITECTURE.md  LOAD_TESTING.md  (+5 more)
devops/: .env.example  .gitignore  API_STATUS_REPORT.md  AUTONOMOUS_GUARDRAILS.md  DEPLOYMENT_GUIDE.md  FINAL_API_TEST_RESULTS.md  GITHUB_INTEGRATION.md  GITHUB_INTEGRATION_SUMMARY.md  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt  setup.sh  test_all_apis.py  test_autonomous.py  test_gemini_models.py  verify_github.py
devops/devops_agent/: __init__.py  config.py  main.py
devops/devops_agent/agents/: __init__.py  base_agent.py  build_agent.py  cicd_agent.py  cloud_build_agent.py  cloud_run_deploy_agent.py  config_generator.py  container_agent.py  devpilot_orchestrator.py  health_check_agent.py  infra_agent.py  orchestrator.py  precondition_validator.py  project_analyzer.py  rollback_agent.py
devops/devops_agent/core/: __init__.py  artifact_registry_client.py  cloud_build_client.py  cloud_logging_client.py  cloud_run_client.py  deployment_status.py  docker_client.py  error_recovery.py  executor.py  file_manager.py  gemini_client.py  health_checker.py  logger.py  secrets_manager.py  security.py  terraform_client.py  uncertainty_handler.py
devops/devops_agent/integrations/: __init__.py  github_client.py  security_hook.py
devops/devops_agent/models/: __init__.py  build_config.py  deployment.py  project.py  report.py
devops/devops_agent/utils/: __init__.py  helpers.py  validators.py
devops/samples/flask-app/: app.py  requirements.txt
devops/samples/flask-app/tests/: test_app.py
devops/samples/node-express/: index.js  package.json
devops/samples/node-express/tests/: app.test.js
devops/tests/: __init__.py  test_project_analyzer.py
devops/tests/integration/: test_devpilot_integration.py  test_github_client.py
devops/tests/unit/: test_devpilot_agents.py  test_secrets_manager.py  test_security.py
(+148 files in other folders)
